--- a/Src/Assets/Style/Style.css
+++ b/Src/Assets/Style/Style.css
@@ -18,19 +18,22 @@ body {
 }
 
 
-header {
-    background: linear-gradient(135deg, #ffcc70, #f700b9);
-    color: white;
-    text-align: center;
-    padding: 2rem 1rem;
+
+.img-desktop {
+    max-width: 100%;
+    height: auto;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2); 
+    display: block;
 }
-
-header nav img {
-    width: 80px;
-    margin-bottom: 1rem;
+.img-mobile {
+    max-width: 100%;
+    height: auto;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2); 
+    display: none;
 }
 
 header h1 {
@@ -39,7 +42,7 @@ header h1 {
 }
 
 header p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     opacity: 0.9;
 }
 
@@ -58,12 +61,7 @@ section {
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     transition: transform 0.2s ease;
 }
-main span {
-    color: #ff6f61 ;
-    font-weight: bold;
-    align-items: right;
-    align-content: right;
-}
+
 section:hover {
     transform: scale(1.02);
 }
@@ -71,8 +69,8 @@ section:hover {
 section h2 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
-    color: #ff6f61;
-    border-bottom: 2px solid #ffcc70;
+    color: #5291b4;
+    border-bottom: 2px solid #04344f;
     display: inline-block;
     padding-bottom: 0.3rem;
 }
@@ -86,13 +84,18 @@ section ul li {
     border-bottom: 1px solid #eee;
     font-size: 1.1rem;
     font-weight: bold;
+    display: flex;
+    justify-content: space-between;
 }
 
 section ul li:last-child {
     border-bottom: none;
-
 }
 
+section ul li span {
+    color: #5291b4;
+    font-weight: bold;
+}
 
 footer {
     text-align: center;
@@ -114,5 +117,11 @@ footer {
     }
     section ul li {
         font-size: 1rem;
+    }
+    .img-desktop {
+        display: none;
+    }
+    .img-mobile {
+        display: block;
     }
 }
