--- a/Src/Assets/Style/Style.css
+++ b/Src/Assets/Style/Style.css
@@ -1,6 +1,3 @@
-/* =======================
-   Estilo global
-======================= */
 * {
     margin: 0;
     padding: 0;
@@ -153,4 +150,51 @@ footer {
   opacity: 1;
   transform: translateY(0);
 }
+article {
+    margin-bottom: 2.5rem;
+    padding: 1.5rem;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease;
+    animation: fadeIn 1.3s ease-in;
+    max-width: 600px;
+}
+article h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    color: #5291b4;
+    border-bottom: 2px solid #04344f;
+    display: inline-block;
+    padding-bottom: 0.3rem;
+}
+article audio {
+    background-color: #04344f;
+    margin-top: 1rem;
+    width: 100%;
+    max-width: 500px;
+    border-radius: 12px;
+    outline: none;
+    display: block;
 
+    /* Aparência */
+    background: linear-gradient(135deg, #04344f, #5291b4); 
+    padding: 6px; /* dá um respiro no contorno */
+    box-shadow: 0 6px 16px rgba(0,0,0,0.25);
+
+    /* Animação de entrada */
+    animation: fadeIn 1.3s ease-in;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Efeito hover */
+article audio:hover {
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+}
+article p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #555;
+    margin-top: 1rem;
+}
